dirty upgrade visibility fix

--- a/client/Components/GameBoard/GameBoard.scss
+++ b/client/Components/GameBoard/GameBoard.scss
@@ -93,7 +93,7 @@
     border-bottom: 2px dashed theme-color(primary);
 
     &.our-side {
-        margin: 0;
+        margin-top: 30px;
         z-index: $layer-player-board-our-side;
 
         .taunt {
